# corsim

./: .gitignore  Cargo.toml  LICENSE  README.md  README_VIEWS.md  rustfmt.toml
data/: dodge_88.csv  dodge_92.csv  dodge_points_92.csv  nomeclature.csv  positions_and_stddev.csv  positions_branches.csv  positions_mean.csv  positions_mean_diameter.csv  positions_radius_stddev.csv  positions_stddev.csv
src/: main.rs  simcor_data_functions.rs
src/actions/: onclick.rs
src/controls/: button.rs  mod.rs  slider.rs  table.rs
src/graphics/: data_gets.rs  draw.rs  mod.rs
