[package]
name = "corsim"
version = "0.1.0"
authors = ["J.Gourassas <jgourassas@gmail.com>"]
edition = "2018"
description = "Coronary artery views in Rust"
keywords = ["coronary", "graphics", "Rust"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "0.8.0", features = ["enable-glwindow"] }
glu-sys = "0.1.4"
nalgebra = "0.23.0"
approx = "0.3.2"
csv = "1.1.3"
ncollide3d = "0.26.1"
ncollide2d = "0.26.1"

[package.metadata.bundle]
name = "CorSim"
identifer = "com.test.myapp"
icon = ["icon32x32.png", "app_icon", "app_icon@2x.png"]
version = "1.0.0"
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
resources = ["imgs"]
category = "Developer Tool"
descrition = "my application"
short_description = "An example application."